# chimera

./: .gitignore  Dockerfile.node  Dockerfile.worker  README.md  commands.txt  ex_chimera_lin_reg.py  ex_parse_time.py  example_linear_regression.py  example_run.py  master_lin_reg.py  master_log_reg.py  non_distributed_linear_regression.py  pyproject.toml  random_forest.py  sklearn_log_reg.py  sklearn_rand_forest.py  test.py
.github/workflows/: ci.yml
chimera_nodes/: example_node.py  tree2.py
chimera_workers/: tree3.py
images/: aggregation_master_fit_state_machine_flowchart.drawio  aggregation_master_predict_state_machine_flowchart.drawio  distributed_bagging.excalidraw  distributed_sgd.excalidraw  distributed_sgd_communication_schema.excalidraw  parameter_server_master_fit_state_machine_flowchart.drawio  parameter_server_master_predict_state_machine_flowchart.drawio  random_forest.excalidraw
images/client/: client_interactions.drawio  data_parallelism.drawio  general.drawio  hybrid_parallelism.drawio
images/master/: aggregation_master_fit_state_machine_flowchart.drawio  aggregation_master_predict_state_machine_flowchart.drawio  parameter_server_master_fit_state_machine_flowchart.drawio  parameter_server_master_predict_state_machine_flowchart.drawio
images/worker/: regression_classification_worker_fit_state_machine_flowchart.drawio  regression_classification_worker_predict_fit_state_machine_flowchart.drawio  sgd_worker_fit_step_state_machine_flowchart.drawio  sgd_worker_request_data_sample_state_machine_flowchart.drawio
src/chimera/: __init__.py  chimera.py
(+49 files in other folders)
